--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ pygame==2.1.2
 stable_baselines3==1.4.0
 psutil
 
-gym<0.19.0
+# gym<0.19.0
 # if gym fails, try explictly requiring this version:
-# gym==0.17.3
+gym==0.17.3
 
 # same with these, only uncomment if they fail
 # pillow==11.0.0
